--- a/Projeto/files/menuprincipal/styles.css
+++ b/Projeto/files/menuprincipal/styles.css
@@ -1,17 +1,69 @@
-﻿body {
-  position:static;
-}
-#base { /* fundo amarelo */
-  position:relative;
-  margin: -10px auto 0px 220px; /* MARGEM EXTERNA*/
-  width:900px;
-  height:615px;
+body {
   background:-webkit-linear-gradient(270deg, rgba(255, 255, 204, 1) 0%, rgba(255, 255, 204, 1) 0%, rgba(255, 204, 0, 1) 100%, rgba(255, 204, 0, 1) 100%);
   background:-moz-linear-gradient(180deg, rgba(255, 255, 204, 1) 0%, rgba(255, 255, 204, 1) 0%, rgba(255, 204, 0, 1) 100%, rgba(255, 204, 0, 1) 100%);
   background:linear-gradient(180deg, rgba(255, 255, 204, 1) 0%, rgba(255, 255, 204, 1) 0%, rgba(255, 204, 0, 1) 100%, rgba(255, 204, 0, 1) 100%);
+ 
+}
+#base { /* fundo branco */
+  margin: -10px auto 0px 220px; /* MARGEM EXTERNA*/
+  width:900px;
+  height:615px;
   box-shadow: 0px 0px 10px rgba(0,0,0,.5);
   padding: 10px 10px 10px 10px; /* MARGEM INTERNA*/
+  background-color: white;
+  
 }
+header#cabecalho{ /* LINHA DE DIVISÃO DO CABEÇALHO */
+      border-bottom: 1px #606060 solid;
+      height: 150px;
+}
+#logo{
+  width: 20%;
+}
+/* Formatação DO MENU*/
+nav#menu{
+  display: block; /* DEFINE O MENU COMO UM UNICO GRANDE BLOCO*/
+}
+
+nav#menu ol{
+  list-style: none;
+  text-transform: uppercase; /* todas as letras em maiusculas*/
+  position: absolute; /* TORNA O MENU ABSOLUTO, O MESMO PODE PASSAR POR SIMA DE TUDO */
+  top: -20px;
+  left: 500px;
+}
+
+nav#menu li {
+  
+  display: inline-block;
+  background-color: rgba(255, 255, 150, 1);
+  padding: 10px;
+  margin: 2px;
+  box-sizing: border-box;
+  transition: background-color 1s;
+}
+
+nav#menu li:hover{
+  background-color: #606060;
+}
+
+nav#menu a {
+  color: #000000;
+  text-decoration: none;
+}
+
+nav#menu a:hover {
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+img#icone{
+  position: absolute;
+  width: 15%;
+  left: 1000px;
+  top: 60px;
+}
+
 #u66_div {
   border-width:0px;
   position:absolute;
@@ -48,14 +100,6 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u67_img { /* barraTopo (Rectangle) */
-  border-width:0px;
-  position:absolute;
-  left:-4px;
-  top:50px;
-  width:928px;
-  height:29px;
-}
 #u69_img {
   background-image: white;
   border-width:2px;
@@ -64,112 +108,4 @@
   top:136px;
   width:800px;
   height:500px;
-}
-#u71_img {
-  border-width:0px;
-  position:absolute;
-  left:10px;
-  top:10px;
-  width:83px;
-  height:67px;
-}
-#u73_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:63px;
-  height:63px;
-}
-#u73 {
-  border-width:0px;
-  position:absolute;
-  left:324px;
-  top:180px;
-  width:63px;
-  height:63px;
-}
-#u73_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u81_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:63px;
-  height:63px;
-}
-#u81 {
-  border-width:0px;
-  position:absolute;
-  left:437px;
-  top:179px;
-  width:63px;
-  height:63px;
-}
-#u81_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u82_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:76px;
-  height:76px;
-}
-#u82 {
-  border-width:0px;
-  position:absolute;
-  left:430px;
-  top:265px;
-  width:76px;
-  height:76px;
-}
-#u82_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u83_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:63px;
-  height:63px;
-}
-#u83 {
-  border-width:0px;
-  position:absolute;
-  left:327px;
-  top:278px;
-  width:63px;
-  height:63px;
-}
-#u83_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
+}*
